# nabu

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: SPEC.md
scripts/: build-vercel.sh  build.sh
src/: main.rs
src/components/: controls.rs  library.rs  mod.rs  reader.rs  settings.rs  stats.rs  upload.rs
src/parser/: mod.rs
src/state/: mod.rs
src/storage/: mod.rs
